force-app/main/default/objects/refedge__Reference_Request__c/refedge__Reference_Request__c.object-meta.xml
<CustomObject>
    <description>This object holds the information necessary for a reference request</description>
    <label>Reference Request</label>
    <nameField>
        <displayFormat>RR-{000000000}</displayFormat>
        <label>Reference Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>