force-app/main/default/objects/refedge__Reference_Request__c/fields/refedge__Lead__c.field-meta.xml
<CustomField>
    <fullName>refedge__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead associated to this request</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Reference Requests</relationshipLabel>
    <relationshipName>Reference_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>