force-app/main/default/objects/refedge__Reference_Request__c/fields/refedge__Opportunity_Stage_f__c.field-meta.xml
<CustomField>
    <fullName>refedge__Opportunity_Stage_f__c</fullName>
    <formula>IF(OR(TEXT(refedge__Opportunity__r.StageName) == &apos;Closed Won&apos;, TEXT(refedge__Opportunity__r.StageName) == &apos;Closed Lost&apos;, TEXT(refedge__Opportunity__r.StageName) == &apos;&apos;), TEXT(refedge__Opportunity__r.StageName), &apos;Not yet Closed&apos;)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>