force-app/main/default/objects/refedge__Reference_Request__c/fields/refedge__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>refedge__Project_Type__c</fullName>
    <inlineHelpText>Only Reference Program Members can be added to Member Projects. Only Reference Program Candidates can be added to Candidate Projects.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>