force-app/main/default/objects/refedge__Reference_Request__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Subject__c</columns>
    <columns>refedge__Opportunity__c</columns>
    <columns>refedge__Requester__c</columns>
    <columns>refedge__Reference_Use__c</columns>
    <columns>refedge__Reference_Request_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>